--- a/style.css
+++ b/style.css
@@ -18,4 +18,12 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
+.titulo-principal{
+    text-align: left;
+    width: 100%;
+    font-size: 30px;
 }
