--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap')
+
 
 :root{
     --branco: #FFFFFF;
@@ -30,4 +31,7 @@ body{
 }
 .titulo-principal span{
     color: var(--verde);
+}
+.botao{
+    font-family: 'Embed code', 'Sans-Serif';
 }
