--- a/style.css
+++ b/style.css
@@ -40,5 +40,6 @@ body{
     padding: 1em;
     font-size: 18px;
     align-items: center;
-    
+    width: 100px;
+    border-bottom: 4px solid var(--botao-inativo);
 }
