--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
     padding: 1em;
     font-size: 18px;
     align-items: center;
-    width: 100px;
+    width: 100%;
     border-bottom: 4px solid var(--botao-ativo);
     border-left: 2px solid var(--botao-ativo);
     border-right: 2px solid var(--botao-ativo);
