--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ body{
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
 }
+.abas-textos{
+    background-color: var(--rosa: #E04CA3);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
+}
 @media screen and (min-width: 768px){
     .botoes{
         display: flex;
