--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body{
     border-bottom: 4px solid var(--verde);
 }
 .abas-textos{
-    background-color: var(--rosa: #E04CA3);
+    background-color: var(--rosa #E04CA3);
     padding: 40px;
     border-radius: 0 0 40px 40px;
 }
